k8s/fix-cloudvideouploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudvideouploader
  namespace: cloudvideouploader
  labels:
    app: cloudvideouploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudvideouploader
  template:
    metadata:
      labels:
        app: cloudvideouploader
    spec:
      containers:
        - name: api
          image: cloudvideouploader:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
