k8s/azurite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azurite
  namespace: cloudvideouploader
  labels: { app: azurite }
spec:
  replicas: 1
  selector:
    matchLabels: { app: azurite }
  template:
    metadata:
      labels: { app: azurite }
    spec:
      containers:
        - name: azurite
          image: mcr.microsoft.com/azure-storage/azurite
          args: ["azurite","--loose","--blobHost","0.0.0.0","--queueHost","0.0.0.0","--tableHost","0.0.0.0","-l","/data"]
          ports:
            - containerPort: 10000
            - containerPort: 10001
            - containerPort: 10002
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: azurite
  namespace: cloudvideouploader
spec:
  selector: { app: azurite }
  ports:
    - name: blob
      port: 10000
      targetPort: 10000
    - name: queue
      port: 10001
      targetPort: 10001
    - name: table
      port: 10002
      targetPort: 10002
  type: ClusterIP
