k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudvideouploader
  namespace: cloudvideouploader
spec:
  selector: { app: cloudvideouploader }
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
