k8s/ing-cloudvideouploader.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudvideouploader
  namespace: cloudvideouploader
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: cloudvideo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudvideouploader
                port:
                  number: 80
